# vrc_osc_tracker

./: .gitignore  Dockerfile  README.md  calibration_settings.yaml  pyproject.toml  shell.nix
app/: __init__.py  calibration.py  config.py  main.py  osc.py  plot.py  track.py  tracker.py  tracking.py  utils.py
app/templates/: config.html  index.html
