[tool.poetry]
name = "vrc_osc_tracker"
version = "0.1.0"
description = ""
authors = ["Alpyg <alpyg@pm.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
python-osc = "^1.9.0"
mediapipe = "^0.10.15"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
poetry = "poetry.console.application:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
